gen/24.3-beta/rpk/rpk-debug-remote-bundle-download.adoc
= rpk debug remote-bundle download
:description: rpk debug remote-bundle download

Download a remote debug bundle.

This command downloads the debug collection process in a remote cluster that
you configured in flags, environment variables, or your rpk profile.

Use the flag '--job-id' to only download the debug bundle with
the given job ID.

Use the flag '--no-confirm' to avoid the confirmation prompt.

== Usage

[,bash]
----
rpk debug remote-bundle download [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for download.

|--job-id |string |ID of the job to download the debug bundle from.

|--no-confirm |- |Disable confirmation prompt.

|-o, --output |string |The file path where the debug file will be written (default ./<timestamp>-remote-bundle.zip).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===